# Manber-Myers-Parallelization

./: .gitignore  CMakeLists.txt  README.md
cuda_docker/: Dockerfile
documentation/: main.tex
documentation/plot_scripts/: cuda_ms_plots.py  cuda_plots.py  mpi_omp_plots.py  mpi_plots.py  omp_plots.py  radar_chart.py  seq_plots.py  summary_plots.py
documentation/sections/: wp1.tex  wp2.tex  wp3.tex  wp4.tex  wp5.tex  wp6.tex
include/: cuda_kernels.cuh  cuda_kernels_parallel.cuh  cuda_malloc_utils.h  cuda_utils.h  seq_suffix.h  seq_suffix_array.h  sequential_suffix_array.h  suffix_array.h  suffix_array_cuda.h  suffix_array_cuda_ms.h  suffix_array_cuda_parallel.h  suffix_array_mpi.h
mpi/: mpi_run.sh
perf-stats/: cuda_measure.sh  cuda_ms_measure.sh  cuda_parallel_measure.sh  measure_all.sh  mpi_measure.sh  mpi_omp_measure.sh  mpi_stats_2.csv  mpi_stats_4.csv  mpi_stats_8.csv  mpi_summary_2.csv  mpi_summary_4.csv  mpi_summary_8.csv  ncu_cuda_ms_profile.sh  ncu_cuda_parallel_profile.sh  ncu_cuda_profile.sh  omp_measure.sh  seq_measure.sh  seq_omp_measure.sh  seq_openmp_measure.sh  seq_stats.csv  seq_stats_int.csv  seq_summary.csv  seq_summary_int.csv  sequential_measure.sh
perf-stats/cuda_measurements/: cuda_stats.csv  cuda_summary.csv
perf-stats/cuda_ms_measurements/: cuda_ms_stats.csv  cuda_ms_summary.csv
perf-stats/cuda_ms_profiles/: cuda_ms_100MB_4s.ncu-rep  cuda_ms_100MB_4s.txt  cuda_ms_500MB_2s.ncu-rep  cuda_ms_500MB_2s.txt  cuda_ms_500MB_4s.ncu-rep  cuda_ms_500MB_4s.txt  cuda_ms_500MB_8s.ncu-rep  cuda_ms_500MB_8s.txt
perf-stats/cuda_parallel_measurements/: cuda_parallel_stats.csv  cuda_parallel_summary.csv
perf-stats/cuda_parallel_profiles/: cuda_parallel_100MB_profile.txt
perf-stats/cuda_profiles/: cuda_100MB_profile.ncu-rep  cuda_100MB_profile.txt  cuda_500MB_profile.ncu-rep  cuda_500MB_profile.txt
perf-stats/mpi_measurements/: mpi_rank0_4c_100MB_mem_profile.txt  mpi_rank0_8c_100MB_mem_profile.txt  mpi_stats_2.csv  mpi_stats_4.csv  mpi_stats_8.csv  mpi_summary_2.csv  mpi_summary_4.csv  mpi_summary_8.csv  rank0_4c_100MB_mem_profile.txt  rank0_8c_100MB_mem_profile.txt
perf-stats/mpi_measurements/2r/: mpi_agg_2.csv  mpi_rank0_2r_100MB_mem_profile.txt  mpi_rank0_2r_500MB_mem_profile.txt  mpi_stats_2.csv  mpi_summary_2.csv
perf-stats/mpi_measurements/4r/: mpi_agg_4.csv  mpi_rank0_4r_100MB_mem_profile.txt  mpi_rank0_4r_500MB_mem_profile.txt  mpi_stats_4.csv  mpi_summary_4.csv
perf-stats/mpi_measurements/8r/: mpi_agg_8.csv  mpi_rank0_8r_100MB_mem_profile.txt  mpi_rank0_8r_500MB_mem_profile.txt  mpi_stats_8.csv  mpi_summary_8.csv
perf-stats/mpi_omp_measurements/: mpi_omp_stats_2r_8t.csv  mpi_omp_stats_4r_4t.csv  mpi_omp_stats_8r_2t.csv  mpi_omp_summary_2r_8t.csv  mpi_omp_summary_4r_4t.csv  mpi_omp_summary_8r_2t.csv
perf-stats/mpi_omp_measurements/2r_4t/: mpi_omp_agg_2r_4t.csv  mpi_omp_rank0_2r_4t_500MB_mem_profile.txt  mpi_omp_stats_2r_4t.csv  mpi_omp_summary_2r_4t.csv
perf-stats/mpi_omp_measurements/2r_8t/: mpi_omp_agg_2r_8t.csv  mpi_omp_rank0_2r_8t_100MB_mem_profile.txt  mpi_omp_rank0_2r_8t_500MB_mem_profile.txt  mpi_omp_stats_2r_8t.csv  mpi_omp_summary_2r_8t.csv
perf-stats/mpi_omp_measurements/4r_2t/: mpi_omp_agg_4r_2t.csv  mpi_omp_rank0_4r_2t_500MB_mem_profile.txt  mpi_omp_stats_4r_2t.csv  mpi_omp_summary_4r_2t.csv
perf-stats/mpi_omp_measurements/4r_4t/: mpi_omp_agg_4r_4t.csv  mpi_omp_rank0_4c_4t_100MB_mem_profile.txt  mpi_omp_rank0_4r_4t_500MB_mem_profile.txt  mpi_omp_stats_4r_4t.csv  mpi_omp_summary_4r_4t.csv
perf-stats/mpi_omp_measurements/8r_2t/: mpi_omp_agg_8r_2t.csv  mpi_omp_rank0_8r_2t_100MB_mem_profile.txt  mpi_omp_rank0_8r_2t_500MB_mem_profile.txt  mpi_omp_stats_8r_2t.csv  mpi_omp_summary_8r_2t.csv
perf-stats/mpi_redundancy_measurements/: mpi_stats_4.csv  mpi_stats_8.csv
perf-stats/omp_measurements/threads_2/: omp_stats_2.csv  omp_summary_2.csv  seq_omp_2t_500MB_mem_profile.txt
perf-stats/omp_measurements/threads_4/: omp_stats_4.csv  omp_summary_4.csv  seq_omp_4t_100MB_mem_profile.txt  seq_omp_4t_500MB_mem_profile.txt
perf-stats/omp_measurements/threads_8/: omp_stats_8.csv  omp_summary_8.csv  seq_omp_8t_100MB_mem_profile.txt  seq_omp_8t_500MB_mem_profile.txt  seq_openmp_8c_100MB_mem_profile.txt
perf-stats/seq_measurements/: seq_100MB_mem_profile.txt  seq_500MB_mem_profile.txt  seq_stats.csv  seq_stats_uint8_t.csv  seq_summary.csv  seq_summary_uint8_t.csv  seq_uint8t_100MB_mem_profile.txt
random_strings/: generate_random_strings.sh  string_creation.sh
src/: cuda_kernels.cu  cuda_kernels_parallel.cu  cuda_main.cpp  cuda_main.cu  cuda_main_parallel.cu  cuda_malloc_utils.cu  cuda_ms_main.cpp  cuda_utils.cu  main.cpp  mpi_main.cpp  mpi_omp_main.cpp  omp_main.cpp  openmp_mpi_main.cpp  seq_main.cpp  seq_suffix_array.cpp  seq_suffix_tree.cpp  sequential_suffix_array.cpp  suffix_array.cpp  suffix_array_cuda.cu  suffix_array_cuda_ms.cu  suffix_array_cuda_parallel.cu  suffix_array_mpi.cpp  suffix_array_mpi_omp.cpp  suffix_array_omp.cpp  suffix_array_openmp.cpp
